重构DependencyNotFoundException和InjectionProvider, 增强依赖类型处理逻辑并支持Provider注入