@@ -1,6 +1,7 @@
 package geektime.tdd.di;
 
 import jakarta.inject.Inject;
+import jakarta.inject.Provider;
 
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Constructor;
@@ -9,6 +10,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
+import java.lang.reflect.Parameter;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
@@ -63,15 +65,22 @@ class InjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
 
     @Override
     public List<Class<?>> getDependencies() {
-        return concat(concat(stream(injectionConstructor.getParameterTypes()), injectionFields.stream().map(Field::getType)),
-            injectionMethods.stream().flatMap(m -> stream(m.getParameterTypes()))).collect(Collectors.toList());
+        return concat(concat(stream(injectionConstructor.getParameterTypes()),
+                injectionFields.stream().map(Field::getType)),
+            injectionMethods.stream().flatMap(m -> stream(m.getParameterTypes())))
+            .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Type> getDependencyTypes() {
+        return concat(concat(stream(injectionConstructor.getParameters()).map(Parameter::getParameterizedType), injectionFields.stream().map(Field::getGenericType)),
+            injectionMethods.stream().flatMap(m -> stream(m.getParameters()).map(Parameter::getParameterizedType))).toList();
     }
 
     private static <T> List<Method> getInjectionMethods(Class<T> component) {
-        List<Method> injectMethods = traverse(component, (methods, current) -> injectable(current.getDeclaredMethods())
-            .filter(m -> isOverrideByInjectMethod(m, methods))
-            .filter(m -> isOverrideByNoInjectMethod(component, m))
-            .toList());
+        List<Method> injectMethods = traverse(component,
+            (methods, current) -> injectable(current.getDeclaredMethods()).filter(m -> isOverrideByInjectMethod(m, methods)).filter(m -> isOverrideByNoInjectMethod(component, m))
+                .toList());
         //!!Important ensure the superclasses' methods are injected first
         Collections.reverse(injectMethods);
         return injectMethods;
